--- a/public/css/app.css
+++ b/public/css/app.css
@@ -480,6 +480,18 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+.container {
+  margin-top: 70px;
+}
+
+.table .thead-dark th {
+  background: #343a40;
+}
+
+.table td {
+  vertical-align: middle;
+}
+
 .navbar {
   position: relative;
   background: #e9e9e9;
@@ -502,32 +514,32 @@ body {
   background: rgba(55, 163, 53, 0.72);
 }
 
-#posts .pagination > .active > .page-link {
+.pagination > .active > .page-link {
   background: rgba(55, 163, 53, 0.72);
 }
 
-#posts .pagination > .page-item > .page-link {
+.pagination > .page-item > .page-link {
   border: none;
   margin: 0;
   color: #000;
   border-radius: 0;
 }
 
-#posts .pagination > .active > .page-link {
+.pagination > .active > .page-link {
   color: #fff;
 }
 
-#posts .pagination > .disabled > .page-link {
+.pagination > .disabled > .page-link {
   background: rgba(148, 148, 148, 0.29);
   color: #959595;
 }
 
-#posts .pagination > .page-item:last-child a {
+.pagination > .page-item:last-child a {
   color: #fff;
   background: #484848;
 }
 
-#posts .pagination > .page-item:first-child a {
+.pagination > .page-item:first-child a {
   color: #fff;
   background: #484848;
 }
@@ -544,7 +556,6 @@ body {
 
 .navbar-brand {
   z-index: auto;
-  margin-left: 9px;
 }
 
 .links {
@@ -617,6 +628,40 @@ body {
   font-style: italic;
 }
 
+#lower-nav .active {
+  background: #343a40 !important;
+  color: white;
+}
+
+#lower-nav .dropdown-menu {
+  -webkit-transform: unset !important;
+          transform: unset !important;
+  margin-top: 0 !important;
+  top: 64px !important;
+  border: 0;
+  padding: 0;
+  width: 100%;
+}
+
+#lower-nav .dropdown-menu.show {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#lower-nav .dropdown-menu .dropdown-item {
+  text-align: center;
+  background: #ececec;
+}
+
+#lower-nav .dropdown-menu .dropdown-item:hover {
+  background: #d3d2d2;
+}
+
+#lower-nav .dropdown-toggle:after {
+  display: none;
+}
+
 #link {
   border-radius: 0;
   border: none;
@@ -625,9 +670,9 @@ body {
 }
 
 #link:hover {
-  -webkit-transition: .4s;
-  transition: .4s;
-  background: #404346 !important;
+  -webkit-transition: .2s;
+  transition: .2s;
+  background: #343a40 !important;
   color: #fff;
 }
 
