--- a/resources/sass/extra.scss
+++ b/resources/sass/extra.scss
@@ -9,11 +9,30 @@ html, body {
   margin-top: 70px;
 }
 
+.goal-data {
+  margin-bottom: 1.5rem;
+  font-size: .9rem;
+  .title {
+    margin-bottom: .4rem;
+    display: block;
+    font-weight: bold;
+  }
+  .description {
+    padding-left: 1.5rem;
+  }
+}
+
+.divider-details {
+  margin: 2rem 0;
+}
+
 .table .thead-dark th {
   background: #343a40;
 }
 
 .table td {
+  padding: .4rem .75rem;
+  height: 15px;
   vertical-align: middle;
 }
 
